TerrainWorksUtils. Update main, April 24

--- a/analysis/PFA_runout.qmd
+++ b/analysis/PFA_runout.qmd
@@ -235,8 +235,9 @@ multiLog$predict_type = "prob"
 multiLog$train(run)
 multiLog$model
 ```
-Use [package iml](https://cran.r-project.org/web/packages/iml/vignettes/intro.html) to explore model behavior.
-First look at feature importance.
+
+Use [package iml](https://cran.r-project.org/web/packages/iml/vignettes/intro.html) to explore model behavior. First look at feature importance.
+
 ```{r}
 x = runData[which(names(runData) != "Track_Type")]
 model = Predictor$new(multiLog, data = x, y = runData$Track_Type)
@@ -244,9 +245,11 @@ num_features = c("Gradient", "Norm_Curv", "Tan_Curv", "age", "geo")
 importance = FeatureImp$new(model, loss = "ce")
 importance$plot(features = num_features)
 ```
-Gradient shows us a highly important, followed by tangent curvature. No surprise; that's consistent with field observations: scour in steep confined channels, deposition in lower-gradient, less-confined zones. 
+
+Gradient shows us a highly important, followed by tangent curvature. No surprise; that's consistent with field observations: scour in steep confined channels, deposition in lower-gradient, less-confined zones.
 
 Package iml also provides [Shapely](https://christophm.github.io/interpretable-ml-book/shapley.html) values. These show how each variable influences the calculated result for the particular set of variable values found for a specific record value. Here are two examples, one for Deposit track type and another for scour.
+
 ```{r}
 x = runData[which(names(runData) != "Track_Type")]
 model = Predictor$new(multiLog, data = runData, y = runData$Track_Type)
@@ -259,9 +262,11 @@ shapley2 = Shapley$new(model, x.interest = x.interest)
 runData[10,]
 plot(shapley2)
 ```
+
 The influence of each feature depends on the set of feature values at that location, with gradient and tangential curvature having the largest influence, at least for these two examples.
 
 Feature effects: this takes awhile to run, but the resulting plots are quite informative.
+
 ```{r}
 x = runData[which(names(runData) != "Track_Type")]
 model = Predictor$new(multiLog, data = x, y = runData$Track_Type)
@@ -269,5 +274,5 @@ num_features = c("Gradient", "Norm_Curv", "Tan_Curv", "age", "geo")
 effect = FeatureEffects$new(model)
 plot(effect, features = num_features)
 ```
-This model behaves as we might expect; how much confidence can we place in predictions? 
-Use mlr3 resampling strategies here - I'll get to this.
+
+This model behaves as we might expect; how much confidence can we place in predictions? Use mlr3 resampling strategies here - I'll get to this.
