--- a/analysis/PFA_data_extraction.qmd
+++ b/analysis/PFA_data_extraction.qmd
@@ -15,6 +15,10 @@ params:
     label: Length Scale (m)
     value: 15.0
     input: numeric
+  radius:
+    label: Radius (m) for DEV
+    value: 30.0
+    input: numeric
   input_list:
     label: Text file containing a list of DEM .flt rasters and initiation point shapefiles.
     value: c:/tempDir/in/DEMs/input_list.txt
@@ -29,7 +33,7 @@ params:
     input: numeric
   expansion_factor:
     label: Expansion Factor
-    value: 1.1
+    value: 1.0
     input: numeric
   duration_list:
     label: List of storm durations
@@ -281,26 +285,36 @@ for (i in 1:num_files) {
 # It can take a long time to create them, so if they're already there, read them in. But make sure you
 # aren't reading .flt rasters created from a different input list.
   grad_name = paste0("gradient_", as.character(i))
+  prof_name = paste0("profcurv_", as.character(i))
+  tan_name = paste0("tancurv_", as.character(i))
   mean_name = paste0("meancurv_", as.character(i))
   
   if (!(file.exists(paste0(output_dir, grad_name, ".flt")) & file.exists(paste0(output_dir, mean_name, ".flt")))) {
     
     rasters <- c(paste0("GRADIENT,", output_dir, grad_name),
+                 paste0("SLOPE NORMAL CURVATURE,", output_dir, prof_name),
+                 paste0("TANGENTIAL CURVATURE,", output_dir, tan_name),
                  paste0("MEAN CURVATURE,", output_dir, mean_name))
 
     TerrainWorksUtils::elev_deriv(rasters = rasters,
                                   length_scale = length_scale,
                                   dem = DEM,
                                   scratch_dir = output_dir)
-    
   }
 
   derivs <- terra::rast(paste0(output_dir, grad_name, ".flt"))
   names(derivs) <- "gradient"
-  derivs <- c(derivs, terra::rast(paste0(output_dir, mean_name, ".flt")))
-  names(derivs[[2]]) <- "mean_curv"
+ 
+  derivs <- c(derivs, terra::rast(paste0(output_dir, tan_name, ".flt")))
+  names(derivs[[2]]) <- "tancurv"
   
-  # Get the gradient and mean curvature values at each initiation site and append them to the ls_pnts dataframe
+  derivs <- c(derivs, terra::rast(paste0(output_dir, prof_name, ".flt")))
+  names(derivs[[3]]) <- "profcurv"
+  
+  derivs <- c(derivs, terra::rast(paste0(output_dir, mean_name, ".flt")))
+  names(derivs[[4]]) <- "meancurv"
+  
+  # Get the gradient, tangent, and profile curvature values at each initiation site and append them to the ls_pnts dataframe
   vals <- terra::extract(derivs,
                          initiation_points,
                          method = "bilinear")
@@ -315,23 +329,39 @@ The ls_pnts dataframe provides the upper and lower limits for gradient and mean 
 ```{r}
 grad_min <- min(ls_pnts$gradient)
 grad_max <- max(ls_pnts$gradient)
-mean_min <- min(ls_pnts$mean_curv)
-mean_max <- max(ls_pnts$mean_curv)
+tan_min <- min(ls_pnts$tancurv)
+tan_max <- max(ls_pnts$tancurv)
+prof_min <- min(ls_pnts$profcurv)
+prof_max <- max(ls_pnts$profcurv)
+mean_min <- min(ls_pnts$meancurv)
+mean_max <- max(ls_pnts$meancurv)
 
 if (!params$expansion_factor == 1) {
   range <- grad_max - grad_min
   dgrad <- (params$expansion_factor - 1.0) * (range / 2.)
   grad_min <- grad_min - dgrad
   grad_max <- grad_max + dgrad
+  
+  range <- tan_max - tan_min
+  dtan <- (params$expansion_factor - 1.0) * (range / 2.)
+  tan_min <- tan_min - dtan
+  tan_max <- tan_max + dtan
+  
+  range <- prof_max - prof_min
+  dprof <- (params$expansion_factor - 1.0) * (range / 2.)
+  prof_min <- prof_min - dprof
+  prof_max <- prof_max + dprof
+  
   range <- mean_max - mean_min
   dmean <- (params$expansion_factor - 1.0) * (range / 2.)
   mean_min <- mean_min - dmean
   mean_max <- mean_max + dmean
   }
 
-range_mx <- matrix(c(grad_min, mean_min, grad_max, mean_max), ncol = 2, nrow = 2)
+range_mx <- matrix(c(grad_min, tan_min, prof_min, mean_min, 
+                     grad_max, tan_max, prof_max, mean_max), ncol = 2, nrow = 4)
 colnames(range_mx) <- c("min", "max")
-rownames(range_mx) <- c("gradient", "mean_curv")
+rownames(range_mx) <- c("gradient", "tancurv", "profcurv", "meancurv")
 ```
 
 Here are the limits, using an expansion factor of `r print(params$expansion_factor)`:
@@ -372,7 +402,7 @@ for (i in 1:num_files) {
   
   grad_name <- paste0("gradient_", as.character(i))
   file_name <- paste0(output_dir, grad_name)
-  covariates <- terra::rast(paste0(file_name, ".flt"))
+  covariates <- terra::rast(paste0(file_name, ".flt")) # covariates[1]
   names(covariates) <- "gradient"
   
 # Get the initiation points for this DEM for each time slot (1996, 2007, 2011)
@@ -390,7 +420,7 @@ for (i in 1:num_files) {
                                 age,
                                 method = "simple")
     
-    vals_1996$age <- (vals_1996$age_dom_2017/10) - (2017-1996) # get stand age at time of 1996 landslides
+    vals_1996$age <- (vals_1996$age_dom_2017/10) - (2017 - 1996) # get stand age at time of 1996 landslides
     keep <- which(vals_1996$age >= 0)
     pnts_1996 <- pnts_1996[keep,] # ignore points where stand age in 1996 is unknown
     vals_1996 <- vals_1996[keep,]
@@ -410,7 +440,7 @@ for (i in 1:num_files) {
                                 age,
                                 method = "simple")
     
-    vals_2007$age <- (vals_2007$age_dom_2017/10) - (2017-2007) # get stand age at time of 2007 landslides
+    vals_2007$age <- (vals_2007$age_dom_2017/10) - (2017 - 2007) # get stand age at time of 2007 landslides
     keep <- which(vals_2007$age >= 0)
     pnts_2007 <- pnts_2007[keep,] # ignore points where stand age in 1996 is unknown
     vals_2007 <- vals_2007[keep,]
@@ -430,18 +460,28 @@ for (i in 1:num_files) {
                                 age,
                                 method = "simple")
     
-    vals_2011$age <- (vals_2011$age_dom_2017/10) - (2017-2011) # get stand age at time of 2011 landslides
+    vals_2011$age <- (vals_2011$age_dom_2017/10) - (2017 - 2011) # get stand age at time of 2011 landslides
     keep <- which(vals_2011$age >= 0)
     pnts_2011 <- pnts_2011[keep,] # ignore points where stand age in 1996 is unknown
     vals_2011 <- vals_2011[keep,]
     vals_2011 <- vals_2011[, "age"]
   }
 
-# Now get mean curvature
+# Now get curvatures and dev
+  tan_name <- paste0("tancurv_", as.character(i))
+  file_name <- paste0(output_dir, tan_name)
+  covariates <- c(covariates, terra::rast(paste0(file_name, ".flt")))
+  names(covariates[[2]]) <- "tancurv"
+
+  prof_name <- paste0("profcurv_", as.character(i))
+  file_name <- paste0(output_dir, prof_name)
+  covariates <- c(covariates, terra::rast(paste0(file_name, ".flt")))
+  names(covariates[[3]]) <- "profcurv"
+  
   mean_name <- paste0("meancurv_", as.character(i))
   file_name <- paste0(output_dir, mean_name)
   covariates <- c(covariates, terra::rast(paste0(file_name, ".flt")))
-  names(covariates[[2]]) <- "mean_curv"
+  names(covariates[[4]]) <- "meancurv"
   
 # Get distance-to-road values
   roads <- terra::crop(all_roads, covariates)
@@ -450,7 +490,7 @@ for (i in 1:num_files) {
     distTo <- rast(covariates,
                    nlyr = 1)
     values(distTo) <- NA
-    covariates <- c(covariates, distTo)
+    covariates <- c(covariates, distTo) # covariates[[5]]
   
   } else {
     
@@ -465,18 +505,28 @@ for (i in 1:num_files) {
                                                         radius = 1000.,
                                                         scratch_dir = output_dir))
   }
-  names(covariates[[3]]) <- "dist_to_road"
+  names(covariates[[5]]) <- "dist_to_road"
   
 # Get total accumulation
   file_name <- paste0(output_dir, "accum")
-  covariates <- c(covariates,
-                  TerrainWorksUtils::bldgrds_nochannels(dem = DEM,
-                                                        raster = file_name,
-                                                        aspect_length = params$length_scale,
-                                                        plan_length = params$length_scale,
-                                                        grad_length = params$length_scale,
-                                                        scratch_dir = output_dir))
-  names(covariates[[4]]) <- "total_accum"
+  accum <- TerrainWorksUtils::bldgrds_nochannels(dem = DEM,
+                                                 raster = file_name,
+                                                 aspect_length = params$length_scale,
+                                                 plan_length = params$length_scale,
+                                                 grad_length = params$length_scale,
+                                                 scratch_dir = output_dir)
+  mask <- terra::focalMat(accum, 
+                         7.5,
+                         type  = "circle",
+                         fillNA = TRUE)
+  
+  accumMax <- terra::focal(accum,
+                           w = mask,
+                           fun = max)
+  
+  covariates <- c(covariates, accumMax)
+                  
+  names(covariates[[6]]) <- "total_accum"
   
   # Get the partial contributing areas here; we don't need to save the rasters.
   # This does take awhile.
@@ -484,7 +534,7 @@ for (i in 1:num_files) {
 
   for (j in 1:ncol(durations)) {
     d <- durations[[j]]
-    raster_name <- paste0("pca_k1_", as.character(d))
+    raster_name <- paste0("pca_", as.character(d), "_", as.character(i))
     file_name <- paste0(output_dir, raster_name)
     covariates <- c(covariates, 
                     TerrainWorksUtils::contributing_area(raster = file_name,
@@ -493,7 +543,7 @@ for (i in 1:num_files) {
                                                          k = k, 
                                                          d = d, 
                                                          scratch_dir = output_dir))
-    names(covariates[[4+j]]) <- raster_name
+    names(covariates[[6 + j]]) <- raster_name
     
   }
   
@@ -523,7 +573,7 @@ for (i in 1:num_files) {
                                                      return_raster = TRUE)
 
   # Set values within the inner buffer and beyond the outer buffer to nodata
-    analysis_mask <- TerrainWorksUtils::mask_by_range(covariates[[1:2]], range_mx)
+    analysis_mask <- TerrainWorksUtils::mask_by_range(covariates[[1:4]], range_mx)
     analysis_mask <- analysis_mask * neg_region
   
     masked <- covariates * analysis_mask
@@ -551,7 +601,7 @@ for (i in 1:num_files) {
                                age,
                                method = "simple")
     
-    age_1996$age_dom_2017 <- (age_1996$age_dom_2017/10) - (2017-1996)
+    age_1996$age_dom_2017 <- (age_1996$age_dom_2017/10) - (2017 - 1996)
     vals$age <- age_1996[, "age_dom_2017"]
     keep <- which(vals$age >= 0)
     vals <- vals[keep, ]
@@ -588,7 +638,7 @@ for (i in 1:num_files) {
                                                      return_raster = TRUE)
 
   # Set values within the inner buffer and beyond the outer buffer to nodata
-    analysis_mask <- TerrainWorksUtils::mask_by_range(covariates[[1:2]], range_mx)
+    analysis_mask <- TerrainWorksUtils::mask_by_range(covariates[[1:4]], range_mx)
     analysis_mask <- analysis_mask * neg_region
   
     masked <- covariates * analysis_mask
@@ -616,7 +666,7 @@ for (i in 1:num_files) {
                                age,
                                method = "simple")
     
-    age_2007$age_dom_2017 <- (age_2007$age_dom_2017/10) - (2017-2007)
+    age_2007$age_dom_2017 <- (age_2007$age_dom_2017/10) - (2017 - 2007)
     vals$age <- age_2007[, "age_dom_2017"]
     keep <- which(vals$age >= 0)
     vals <- vals[keep, ]
@@ -653,7 +703,7 @@ for (i in 1:num_files) {
                                                      return_raster = TRUE)
 
   # Set values within the inner buffer and beyond the outer buffer to nodata
-    analysis_mask <- TerrainWorksUtils::mask_by_range(covariates[[1:2]], range_mx)
+    analysis_mask <- TerrainWorksUtils::mask_by_range(covariates[[1:4]], range_mx)
     analysis_mask <- analysis_mask * neg_region
   
     masked <- covariates * analysis_mask
@@ -681,7 +731,7 @@ for (i in 1:num_files) {
                                age,
                                method = "simple")
     
-    age_2011$age_dom_2017 <- (age_2011$age_dom_2017/10) - (2017-2011)
+    age_2011$age_dom_2017 <- (age_2011$age_dom_2017/10) - (2017 - 2011)
     vals$age <- age_2011[, "age_dom_2017"]
     keep <- which(vals$age >= 0)
     vals <- vals[keep, ]
@@ -701,13 +751,27 @@ for (i in 1:num_files) {
   unlink(paste0(file_name, ".prj"))
   unlink(paste0(file_name, ".log"))
   
-  mean_name <- paste0("meancurv_", as.character(i))
-  file_name <- paste0(output_dir, mean_name)
+  tan_name <- paste0("tancurv_", as.character(i))
+  file_name <- paste0(output_dir, tan_name)
   unlink(paste0(file_name, ".flt")) 
   unlink(paste0(file_name, ".hdr"))
   unlink(paste0(file_name, ".prj"))
   unlink(paste0(file_name, ".log"))
   
+  prof_name <- paste0("profcurv_", as.character(i))
+  file_name <- paste0(output_dir, prof_name)
+  unlink(paste0(file_name, ".flt")) 
+  unlink(paste0(file_name, ".hdr"))
+  unlink(paste0(file_name, ".prj"))
+  unlink(paste0(file_name, ".log"))
+  
+  dev_name <- paste0("dev_", as.character(i))
+  file_name <- paste0(output_dir, dev_name)
+  unlink(paste0(file_name, ".flt")) 
+  unlink(paste0(file_name, ".hdr"))
+  unlink(paste0(file_name, ".prj"))
+  unlink(paste0(file_name, ".log")) 
+    
   raster_name <- paste0("distTo_", as.character(i))
   file_name <- paste0(output_dir, raster_name)
   if (file.exists(paste0(file_name, ".flt"))) {
@@ -717,21 +781,21 @@ for (i in 1:num_files) {
     unlink(paste0(file_name, ".log"))    
   }
  
-  file_name <- paste0(output_dir, "accum")
-  unlink(paste0(file_name, ".flt")) 
-  unlink(paste0(file_name, ".hdr"))
-  unlink(paste0(file_name, ".prj"))
-  unlink(paste0(file_name, ".log"))
+#  file_name <- paste0(output_dir, "accum")
+#  unlink(paste0(file_name, ".flt")) 
+#  unlink(paste0(file_name, ".hdr"))
+#  unlink(paste0(file_name, ".prj"))
+#  unlink(paste0(file_name, ".log"))
   
-  for (j in 1:ncol(durations)) {
-    d <- durations[[j]]
-    raster_name <- paste0("pca_k1_", as.character(d))
-    file_name <- paste0(output_dir, raster_name)
-    unlink(paste0(file_name, ".flt")) 
-    unlink(paste0(file_name, ".hdr"))
-    unlink(paste0(file_name, ".prj"))
-    unlink(paste0(file_name, ".log"))
-  }
+#  for (j in 1:ncol(durations)) {
+#    d <- durations[[j]]
+#    raster_name <- paste0("pca_k1_", as.character(d))
+#    file_name <- paste0(output_dir, raster_name)
+#    unlink(paste0(file_name, ".flt")) 
+#    unlink(paste0(file_name, ".hdr"))
+#    unlink(paste0(file_name, ".prj"))
+#    unlink(paste0(file_name, ".log"))
+#  }
 }
 ```
 
@@ -745,12 +809,12 @@ ls_2011$class <- "pos"
 nonls_1996$class <- "neg"
 nonls_2007$class <- "neg"
 nonls_2011$class <- "neg"
-save(ls_1996, file = paste0(output_dir, "ls_1996.Rdata"))
-save(ls_2007, file = paste0(output_dir, "ls_2007.Rdata"))
-save(ls_2011, file = paste0(output_dir, "ls_2011.Rdata"))
-save(nonls_1996, file = paste0(output_dir, "nonls_1996.Rdata"))
-save(nonls_2007, file = paste0(output_dir, "nonls_2007.Rdata"))
-save(nonls_2011, file = paste0(output_dir, "nonls_2011.Rdata"))
+save(ls_1996, file = paste0(output_dir, "ls_1996_April11.Rdata"))
+save(ls_2007, file = paste0(output_dir, "ls_2007_April11.Rdata"))
+save(ls_2011, file = paste0(output_dir, "ls_2011_April11.Rdata"))
+save(nonls_1996, file = paste0(output_dir, "nonls_1996_April11.Rdata"))
+save(nonls_2007, file = paste0(output_dir, "nonls_2007_April11.Rdata"))
+save(nonls_2011, file = paste0(output_dir, "nonls_2011_April11.Rdata"))
 ```
 
 Take a look.
