--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -73,3 +73,343 @@
 	url = {http://dx.doi.org/10.1002/esp.4830},
 	langid = {en}
 }
+
+@article{griswald2008,
+    title = {Mobility statistics and automated hazard mapping for debris flows and rock avalanches},
+	author = {Griswold, J. P. and Iverson, R. M.},
+	year = {2008},
+	journal = {USGS Scientific Investigations Report},
+	number = {2007-5276},
+	url = {http://pubs.usgs.gov/sir/2007/5276/}
+}
+
+@article{lancaster2003,
+	title = {Effects of wood on debris flow runout in small mountain watersheds},
+	author = {Lancaster, Stephen T. and Hayes, Shannon K. and Grant, Gordon E.},
+	year = {2003},
+	month = {06},
+	date = {2003-06},
+	journal = {Water Resources Research},
+	volume = {39},
+	number = {6},
+	doi = {10.1029/2001wr001227},
+	url = {http://dx.doi.org/10.1029/2001WR001227},
+	langid = {en}
+}
+
+@techreport{hofmeister2002,
+    title = {Hazard map of potential rapidly moving landslides in western Oregon, Interpretive Map Series - 22},
+	author = {Hofmeister, R. J. and Miller, D. J. and Mills, K. A. and Hinkle, J. C. and Beier, A. C.},
+	year = {2002},
+	institution = {Oregon Department of Geology and Mineral Industries},
+	url = {https://www.oregongeology.org/pubs/ims/p-ims-022.htm}
+}
+	
+@article{may2002,
+	title = {DEBRIS FLOWS THROUGH DIFFERENT FOREST AGE CLASSES IN THE CENTRAL OREGON COAST RANGE},
+	author = {May, Christine L.},
+	year = {2002},
+	month = {08},
+	date = {2002-08},
+	journal = {Journal of the American Water Resources Association},
+	pages = {1097--1113},
+	volume = {38},
+	number = {4},
+	doi = {10.1111/j.1752-1688.2002.tb05549.x},
+	url = {http://dx.doi.org/10.1111/j.1752-1688.2002.tb05549.x},
+	langid = {en}
+}
+
+@techreport{robison1999,
+    title = {Storm impacts and landslides of 1996: final report},
+	author = {Robison, G. E. and Mills, K. A. and Paul, J. and Dent, L. and Skaugset, A.},
+	year = {1999},
+	institution = {Oregon Department of Forestry}
+}
+
+@article{reid2016,
+	title = {Forecasting inundation from debris flows that grow volumetrically during travel, with application to the Oregon Coast Range, USA},
+	author = {Reid, Mark E. and Coe, Jeffrey A. and Brien, Dianne L.},
+	year = {2016},
+	month = {11},
+	date = {2016-11},
+	journal = {Geomorphology},
+	pages = {396--411},
+	volume = {273},
+	doi = {10.1016/j.geomorph.2016.07.039},
+	url = {http://dx.doi.org/10.1016/j.geomorph.2016.07.039},
+	langid = {en}
+}
+
+@article{coe2011,
+	title = {Assessment of topographic and drainage network controls on debris-flow travel distance along the west coast of the United States},
+	author = {Coe, Jeffrey A.},
+	year = {2011},
+	month = {06},
+	date = {2011-06-10},
+	journal = {Italian Journal of Engineering Geology and Environment},
+	pages = {199--209},
+	number = {201103},
+	doi = {10.4408/IJEGE.2011-03.B-024},
+	url = {https://doi.org/10.4408/IJEGE.2011-03.B-024},
+	langid = {eng}
+}
+
+@article{fannin2001,
+	title = {An empirical-statistical model for debris flow travel distance},
+	author = {Fannin, R J and Wise, M P},
+	year = {2001},
+	month = {10},
+	date = {2001-10-01},
+	journal = {Canadian Geotechnical Journal},
+	pages = {982--994},
+	volume = {38},
+	number = {5},
+	doi = {10.1139/t01-030},
+	url = {http://dx.doi.org/10.1139/t01-030},
+	langid = {en}
+}
+
+@article{miller2007,
+	title = {Effects of forest cover, topography, and sampling extent on the measured density of shallow, translational landslides},
+	author = {Miller, Daniel J. and Burnett, Kelly M.},
+	year = {2007},
+	month = {03},
+	date = {2007-03},
+	journal = {Water Resources Research},
+	volume = {43},
+	number = {3},
+	doi = {10.1029/2005wr004807},
+	url = {http://dx.doi.org/10.1029/2005WR004807},
+	langid = {en}
+}
+
+@techreport{burns2022,
+    title = {Protocol for channelized debris flow susceptibility mapping},
+	author = {Burns, W. J. and Franczyk, J. J. and Calhoon, N. C.},
+	year = {2022},
+	institution = {Oregon Department of Geology and Mineral Resources},
+	number = {Special Paper 53},
+	url = {https://www.oregongeology.org/pubs/sp/SP-53/p-SP-53.htm}
+}
+
+@article{burnett2007,
+    title = {Streamside policies for headwater channels: an example considering debris flows in the Oregon Coastal Province},
+	author = {Burnett, K. M. and Miller, D. J.},
+	year = {2007},
+	journal = {Forest Science},
+	volume = {53},
+	number = {2},
+	pages = {239-253}
+}
+
+@techreport{odf2022,
+    title = {Private Forest Accord Report},
+	author = {Oregon Department of Forestry},
+	year = {2022},
+	institution = {Oregon Department of Forestry},
+	url = {https://www.oregon.gov/odf/aboutodf/documents/2022-odf-private-forest-accord-report.pdf}
+}
+
+
+
+@book{kalbfleisch2002,
+	title = {The Statistical Analysis of Failure Time Data},
+	author = {Kalbfleisch, John D. and Prentice, Ross L.},
+	year = {2002},
+	month = {08},
+	date = {2002-08-26},
+	publisher = {John Wiley & Sons, Inc.},
+	doi = {10.1002/9781118032985},
+	url = {http://dx.doi.org/10.1002/9781118032985}
+}
+
+@article{emmert-streib2019,
+	title = {Introduction to Survival Analysis in Practice},
+	author = {Emmert-Streib, Frank and Dehmer, Matthias},
+	year = {2019},
+	month = {09},
+	date = {2019-09-08},
+	journal = {Machine Learning and Knowledge Extraction},
+	pages = {1013--1038},
+	volume = {1},
+	number = {3},
+	doi = {10.3390/make1030058},
+	url = {http://dx.doi.org/10.3390/make1030058},
+	langid = {en}
+}
+
+@article{ruhe2018,
+	title = {Quantifying Change Over Time: Interpreting Time-varying Effects In Duration Analyses},
+	author = {Ruhe, Constantin},
+	year = {2018},
+	month = {01},
+	date = {2018-01},
+	journal = {Political Analysis},
+	pages = {90--111},
+	volume = {26},
+	number = {1},
+	doi = {10.1017/pan.2017.35},
+	url = {http://dx.doi.org/10.1017/pan.2017.35},
+	langid = {en}
+}
+
+@article{clarke2008,
+	title = {Modeling Streams and Hydrogeomorphic Attributes in Oregon From Digital and Field Data{\textsuperscript{1}}},
+	author = {Clarke, Sharon E. and Burnett, Kelly M. and Miller, Daniel J.},
+	year = {2008},
+	month = {04},
+	date = {2008-04},
+	journal = {JAWRA Journal of the American Water Resources Association},
+	pages = {459--477},
+	volume = {44},
+	number = {2},
+	doi = {10.1111/j.1752-1688.2008.00175.x},
+	url = {http://dx.doi.org/10.1111/j.1752-1688.2008.00175.x},
+	langid = {en}
+}
+
+@techreport{miller2015,
+    title = {Creation of a digital flowline network from IfSAR 5-m DEMs for the Matanuska-Susitna Basins: a resource for update of the National Hydrographic Dataset in Alaska},
+	author = {Miller, D. J. and Benda, L. and DePasquale, J. and Albert, D.},
+	year = {2015},
+	institution = {The Nature Conservancy},
+	url = {https://www.conservationgateway.org/ConservationByGeography/NorthAmerica/UnitedStates/alaska/scak/Documents/Miller_etal_MatSu_Elevation_Derived_Flow_Network_Report.pdf}
+}
+
+@article{ocallaghan1984,
+	title = {The extraction of drainage networks from digital elevation data},
+	author = {{O'Callaghan}, John F. and Mark, David M.},
+	year = {1984},
+	month = {12},
+	date = {1984-12},
+	journal = {Computer Vision, Graphics, and Image Processing},
+	pages = {323--344},
+	volume = {28},
+	number = {3},
+	doi = {10.1016/s0734-189x(84)80011-0},
+	url = {http://dx.doi.org/10.1016/S0734-189X(84)80011-0},
+	langid = {en}
+}
+
+@inbook{wilson,
+	title = {Water in the Landscape: A Review of Contemporary Flow Routing Algorithms},
+	author = {WILSON, John P. and AGGETT, Graeme and Yongxin, DENG and LAM, Christine S.},
+	publisher = {Springer Berlin Heidelberg},
+	pages = {213--236},
+	doi = {10.1007/978-3-540-77800-4_12},
+	url = {http://dx.doi.org/10.1007/978-3-540-77800-4_12}
+}
+
+@article{shelef2013,
+	title = {Impact of flow routing on catchment area calculations, slope estimates, and numerical simulations of landscape development},
+	author = {Shelef, Eitan and Hilley, George E.},
+	year = {2013},
+	month = {10},
+	date = {2013-10-11},
+	journal = {Journal of Geophysical Research: Earth Surface},
+	pages = {2105--2123},
+	volume = {118},
+	number = {4},
+	doi = {10.1002/jgrf.20127},
+	url = {http://dx.doi.org/10.1002/jgrf.20127},
+	langid = {en}
+}
+
+@article{tarboton1997,
+	title = {A new method for the determination of flow directions and upslope areas in grid digital elevation models},
+	author = {Tarboton, David G.},
+	year = {1997},
+	month = {02},
+	date = {1997-02},
+	journal = {Water Resources Research},
+	pages = {309--319},
+	volume = {33},
+	number = {2},
+	doi = {10.1029/96wr03137},
+	url = {http://dx.doi.org/10.1029/96WR03137},
+	langid = {en}
+}
+
+@article{jensonDomique1988,
+    title = {Extracting topographic structure from digital elevatiojn data for geographic information system analysis},
+	author = {Jenson, S. K. and Dominque, J. O.},
+	year = {1997},
+	volume = {54},
+	number = {11},
+	pages = {1593-1600},
+	journal = {Photogrammetric Engineering and Remote Sensing},
+	url = {https://www.asprs.org/wp-content/uploads/pers/1988journal/nov/1988_nov_1593-1600.pdf}
+}
+@article{wang2019,
+	title = {Review on algorithms of dealing with depressions in grid DEM},
+	author = {Wang, Yi-Jie and Qin, Cheng-Zhi and Zhu, A-Xing},
+	year = {2019},
+	month = {04},
+	date = {2019-04-03},
+	journal = {Annals of GIS},
+	pages = {83--97},
+	volume = {25},
+	number = {2},
+	doi = {10.1080/19475683.2019.1604571},
+	url = {http://dx.doi.org/10.1080/19475683.2019.1604571},
+	langid = {en}
+}
+
+@article{soille2004,
+	title = {Morphological carving},
+	author = {Soille, Pierre},
+	year = {2004},
+	month = {04},
+	date = {2004-04},
+	journal = {Pattern Recognition Letters},
+	pages = {543--550},
+	volume = {25},
+	number = {5},
+	doi = {10.1016/j.patrec.2003.12.007},
+	url = {http://dx.doi.org/10.1016/j.patrec.2003.12.007},
+	langid = {en}
+}
+
+@article{barnes2014,
+	title = {Priority-flood: An optimal depression-filling and watershed-labeling algorithm for digital elevation models},
+	author = {Barnes, Richard and Lehman, Clarence and Mulla, David},
+	year = {2014},
+	month = {01},
+	date = {2014-01},
+	journal = {Computers & Geosciences},
+	pages = {117--127},
+	volume = {62},
+	doi = {10.1016/j.cageo.2013.04.024},
+	url = {http://dx.doi.org/10.1016/j.cageo.2013.04.024},
+	langid = {en}
+}
+
+@article{shavers2020,
+	title = {Channel cross-section analysis for automated stream head identification},
+	author = {Shavers, Ethan and Stanislawski, Lawrence V.},
+	year = {2020},
+	month = {10},
+	date = {2020-10},
+	journal = {Environmental Modelling & Software},
+	pages = {104809},
+	volume = {132},
+	doi = {10.1016/j.envsoft.2020.104809},
+	url = {http://dx.doi.org/10.1016/j.envsoft.2020.104809},
+	langid = {en}
+}
+
+@article{montgomery1993,
+	title = {Channel network source representation using digital elevation models},
+	author = {Montgomery, David R. and Foufoula-Georgiou, Efi},
+	year = {1993},
+	month = {12},
+	date = {1993-12},
+	journal = {Water Resources Research},
+	pages = {3925--3934},
+	volume = {29},
+	number = {12},
+	doi = {10.1029/93wr02463},
+	url = {http://dx.doi.org/10.1029/93WR02463},
+	langid = {en}
+}
