PFA_runout_Dogami.qmd and related files. Update.

--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -413,3 +413,192 @@
 	url = {http://dx.doi.org/10.1029/93WR02463},
 	langid = {en}
 }
+
+@article{minár2020,
+	title = {A comprehensive system of definitions of land surface (topographic) curvatures, with implications for their application in geoscience modelling and prediction},
+	author = {{Minár}, Jozef and Evans, Ian S. and {Jen{\v{c}}o}, {Marián}},
+	year = {2020},
+	month = {12},
+	date = {2020-12},
+	journal = {Earth-Science Reviews},
+	pages = {103414},
+	volume = {211},
+	doi = {10.1016/j.earscirev.2020.103414},
+	url = {http://dx.doi.org/10.1016/j.earscirev.2020.103414},
+	langid = {en}
+}
+
+@article{sîrbu2019,
+	title = {Scaling land-surface variables for landslide detection},
+	author = {{Sîrbu}, Flavius and {Dr{\u{a}}guț}, Lucian and Oguchi, Takashi and Hayakawa, Yuichi and Micu, Mihai},
+	year = {2019},
+	month = {06},
+	date = {2019-06-13},
+	journal = {Progress in Earth and Planetary Science},
+	volume = {6},
+	number = {1},
+	doi = {10.1186/s40645-019-0290-1},
+	url = {http://dx.doi.org/10.1186/s40645-019-0290-1},
+	langid = {en}
+}
+
+@book{digital2010,
+	title = {Digital Soil Mapping},
+	editor = {Boettinger, Janis L. and Howell, David W. and Moore, Amanda C. and Hartemink, Alfred E. and Kienast-Brown, Suzann},
+	year = {2010},
+	date = {2010},
+	publisher = {Springer Netherlands},
+	doi = {10.1007/978-90-481-8863-5},
+	url = {http://dx.doi.org/10.1007/978-90-481-8863-5}
+}
+
+@article{bernard2021,
+	title = {Beyond 2D landslide inventories and their rollover: synoptic 3D inventories and volume from repeat lidar data},
+	author = {Bernard, Thomas G. and Lague, Dimitri and Steer, Philippe},
+	year = {2021},
+	month = {08},
+	date = {2021-08-26},
+	journal = {Earth Surface Dynamics},
+	pages = {1013--1044},
+	volume = {9},
+	number = {4},
+	doi = {10.5194/esurf-9-1013-2021},
+	url = {http://dx.doi.org/10.5194/esurf-9-1013-2021},
+	langid = {en}
+}
+
+@article{delong2022,
+	title = {Regional{-}Scale Landscape Response to an Extreme Precipitation Event From Repeat Lidar and Object{-}Based Image Analysis},
+	author = {DeLong, S. B. and Hammer, M. N. and Engle, Z. T. and Richard, E. M. and Breckenridge, A. J. and Gran, K. B. and Jennings, C. E. and Jalobeanu, A.},
+	year = {2022},
+	month = {12},
+	date = {2022-12},
+	journal = {Earth and Space Science},
+	volume = {9},
+	number = {12},
+	doi = {10.1029/2022ea002420},
+	url = {http://dx.doi.org/10.1029/2022ea002420},
+	langid = {en}
+}
+
+@mastersthesis{may_MS1998,
+    title = {Debris Flow Characteristics Associated with Forest Practices in the Central Oregon Coast Range},
+	author = {May, C. L.},
+	year = {1998},
+	school = {Oregon State University},
+	url = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/d217qr764}
+}
+	
+@article{benda1990a,
+	title = {The influence of debris flows on channels and valley floors in the Oregon Coast Range, U.S.A.},
+	author = {Benda, Lee},
+	year = {1990},
+	month = {08},
+	date = {1990-08},
+	journal = {Earth Surface Processes and Landforms},
+	pages = {457--466},
+	volume = {15},
+	number = {5},
+	doi = {10.1002/esp.3290150508},
+	url = {http://dx.doi.org/10.1002/esp.3290150508},
+	langid = {en}
+}
+
+@article{stock2006,
+	title = {Erosion of steepland valleys by debris flows},
+	author = {Stock, J. D. and Dietrich, W. E.},
+	year = {2006},
+	month = {09},
+	date = {2006-09-01},
+	journal = {Geological Society of America Bulletin},
+	pages = {1125--1148},
+	volume = {118},
+	number = {9-10},
+	doi = {10.1130/b25902.1},
+	url = {http://dx.doi.org/10.1130/B25902.1},
+	langid = {en}
+}
+
+@article{may2003,
+	title = {Processes and rates of sediment and wood accumulation in headwater streams of the Oregon Coast Range, USA},
+	author = {May, Christine L. and Gresswell, Robert E.},
+	year = {2003},
+	date = {2003},
+	journal = {Earth Surface Processes and Landforms},
+	pages = {409--424},
+	volume = {28},
+	number = {4},
+	doi = {10.1002/esp.450},
+	url = {http://dx.doi.org/10.1002/esp.450},
+	langid = {en}
+}
+
+@article{dietrich1978,
+    title = {Sediment budget for a small catchment in mountainous terrain},
+	author = {Dietrich, W. E. and Dunne, T.},
+	year = {1978},
+	journal = {Zietshrift für Geomorphologie},
+	volume = {Suppl. Bd. 29},
+	pages = {191-206}
+}
+
+@inbook{dietrich1982,
+    author = {Dietrich, W. E. and Dunne, T. and Humphrey, N. F. and Reid, L. M.},
+	title = {Construction of sediment budgets for drainage basins},
+	booktitle = {Sediment Budgets and Routing in Forested Drainage Basins, General Technical Report PNW-141},
+	year = {1982},
+	publisher = {US Department of Agriculture, Forest Service},
+	pages = {5-23}
+}
+@article{patton2018,
+	title = {Predicting soil thickness on soil mantled hillslopes},
+	author = {Patton, Nicholas R. and Lohse, Kathleen A. and Godsey, Sarah E. and Crosby, Benjamin T. and Seyfried, Mark S.},
+	year = {2018},
+	month = {08},
+	date = {2018-08-20},
+	journal = {Nature Communications},
+	volume = {9},
+	number = {1},
+	doi = {10.1038/s41467-018-05743-y},
+	url = {http://dx.doi.org/10.1038/s41467-018-05743-y},
+	langid = {en}
+}
+
+@article{zevenbergen1987,
+	title = {Quantitative analysis of land surface topography},
+	author = {Zevenbergen, Lyle W. and Thorne, Colin R.},
+	year = {1987},
+	month = {01},
+	date = {1987-01},
+	journal = {Earth Surface Processes and Landforms},
+	pages = {47--56},
+	volume = {12},
+	number = {1},
+	doi = {10.1002/esp.3290120107},
+	url = {http://dx.doi.org/10.1002/esp.3290120107},
+	langid = {en}
+}
+
+@article{iverson1998,
+	title = {Objective delineation of lahar-inundation hazard zones},
+	author = {Iverson, Richard M. and Schilling, Steven P. and Vallance, James W.},
+	year = {1998},
+	month = {08},
+	date = {1998-08},
+	journal = {Geological Society of America Bulletin},
+	pages = {972--984},
+	volume = {110},
+	number = {8},
+	doi = {10.1130/0016-7606(1998)110<0972:odolih>2.3.co;2},
+	url = {http://dx.doi.org/10.1130/0016-7606(1998)110<0972:ODOLIH>2.3.CO;2}
+}
+
+@techreport{schilling1998,
+    title = {LAHARZ: GIS programs for automated mapping of lahar-inundation hazard zones},
+	author = {Schilling, S. P.},
+	institution = {US Geological Survey},
+	number = {Open File Report 98-638},
+	year = {1998}
+}
+
+	
